k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-tracker
spec:
  selector:
    app: finance-tracker
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 5000
  type: NodePort
