k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: finance-tracker
   annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: finance-tracker.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: finance-tracker
              port:
                number: 80
